--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Sample Project</title>
+    <title>Nodium</title>
     <script data-main="js/main" src="js/lib/require.js"></script>
 </head>
 <body>
-    <h1>My Sample Project</h1>
+    <h1>People</h1>
     <a href="#">Index</a>, <a href="#test">Test</a>
     <div id="content"></div>
 </body>
