Some things are working, some others not...

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>People</h1>
-    <a href="#">Index</a>, <a href="#test">Test</a>
+    <a href="#people">Fetch Collection</a>, <a href="#people/Mariano">Fetch Marianico</a>
     <div id="content"></div>
 </body>
 </html>
